--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
+    "medium-zoom": "^1.0.6",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.8",
     "nodemon": "^2.0.13",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path-browserify": "^1.0.1"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.31",
